syntax="proto3";

package proto;

message Account {
    bytes Token = 1;
    bytes Available = 2;
    bytes Locked   = 3;
}

message Fund {
    bytes Address = 1;
    repeated Account Accounts = 2;
}

message FundSettle {
    bytes Token = 2;
    bytes IncAvailable = 3;
    bytes ReduceLocked = 4;
    bytes ReleaseLocked = 5;
}

message UserFundSettle {
    bytes Address = 1;
    repeated FundSettle fundSettles = 2;
}

message UserFeeSettle {
    bytes Address = 1;
    bytes BaseFee = 2;
    bytes BrokerFee = 3;
}

message FeeSettle {
    bytes Token = 1;
    bytes Broker = 2;
    repeated UserFeeSettle userFeeSettles = 3;
}

message SettleActions {
    int32 marketId = 1;
    repeated UserFundSettle fundActions = 2;
    repeated FeeSettle feeActions = 3;
}

message FeeAccount {
    bytes Token = 1;
    bytes BaseAmount = 2; // for vx mine and dividend
    bytes BrokerAmount = 3; // only vx mine
}

message FeeSumByPeriod {
    repeated FeeAccount fees = 1;
    uint64 lastValidPeriod = 2;
    bool FeeDivided = 3;
    bool MinedVxDivided = 4;
}

message UserFees { // only for vx mine
    repeated UserFeeWithPeriod fees = 1;
}

message UserFeeWithPeriod {
    repeated FeeAccount userFees = 1;
    uint64 Period = 2;
}

message BrokerFeeSum {
    bytes Broker = 1;
    repeated FeeAccount fees = 2;
}

message BrokerFeeSumByPeriod {
    repeated BrokerFeeSum brokerFees = 1;
}

message VxFunds {
    repeated VxFundWithPeriod funds = 1;
}

message VxFundWithPeriod {
    uint64 Period = 1; // last snapshot height in period
    bytes Amount = 2;
}

message PledgeVip {
    int64 Timestamp = 1;
    int32 PledgeTimes = 2; //sum pledge times in case duplicate pledge happen
}
